# python2024

./: README.md  pyproject.toml
python2024/: __init__.py  conditions.py  data_structure.py  generate_pdf.py  generate_strong_password.py  greeting.py  guess.py  lession_functions.py  lession_numbers.py  strings.py  type-casting.py
