[tool.poetry]
name = "python2024"
version = "0.1.0"
description = "Python Tutorials 2024"
authors = ["misostack <misostack.com@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reportlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
